[package]
name = "openservicebroker"
version = "0.1.0"
authors = ["Jiayi Hu <jiayi.ghu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.118"
serde_json = "1.0.61"
log = "0.4.11"

[dev-dependencies]
env_logger = "0.8.2"
simple-logging = "2.0.2"

[lib]
name = "brokerapi"

[[example]]
name = "osb"
